# assistant

./: README.md  com.afasha.assistant.json  com.iamafasha.assistant.json  com.iamafasha.com.json  meson.build
data/: com.afasha.assistant.appdata.xml.in  com.afasha.assistant.desktop.in  com.afasha.assistant.gschema.xml  com.iamafasha.assistant.appdata.xml.in  com.iamafasha.assistant.desktop.in  com.iamafasha.assistant.gschema.xml  com.iamafasha.com.appdata.xml.in  com.iamafasha.com.desktop.in  com.iamafasha.com.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: assistant-application.c  assistant-application.h  assistant-window.c  assistant-window.h  assistant-window.ui  assistant.gresource.xml  com.afasha.assistant.data.gresource.xml  com.afasha.assistant.src.gresource.xml  main.c  main.js  meson.build  window.js  window.ui
src/gtk/: help-overlay.ui
